--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   },
   "homepage": "https://github.com/ThreeAmigosModding/documentation#readme",
   "dependencies": {
+    "@tabler/icons-react": "^3.31.0",
+    "@tailwindcss/postcss": "^4.0.11",
     "next": "^13.0.6",
     "nextra": "2.13.4",
     "nextra-theme-docs": "2.13.4",
+    "postcss": "^8.5.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
